[package]
name = "schack_gui"
version = "0.1.0"
authors = ["Eskil Queseth <eskilq@kth.se>", "Viola Söderlund <violaso@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"eliasfl-chess" = { git = "https://github.com/INDAPlus21/eliasfl-chess.git" }
ggez = "0.5"